--- a/views/includes/gameinstance.pug
+++ b/views/includes/gameinstance.pug
@@ -139,7 +139,7 @@ script.
         $.ajax({method:'POST',
            url: 'game/state', 
         data: {status: game.fen()}, 
-        //- success: function(data){ alert(data); }, 
+        //- success: function(data){ alert(data); alert("asdadadd")}, 
         //- error: function(xhr, desc, err){console.log(err);}
 
         });
