--- a/views/includes/head.pug
+++ b/views/includes/head.pug
@@ -10,7 +10,8 @@ head
   //- chess tables
   script(src='chess-package/js/chessboard-0.3.0.js')
   //- script(src='https://code.jquery.com/jquery-1.12.4.min.js')
-  script(src='https://code.jquery.com/jquery-1.12.4.js')
+  //- script(src='https://code.jquery.com/jquery-1.12.4.js')
+  script(src="http://code.jquery.com/jquery-1.6.2.min.js")
 
 
   //- chess move validation/ rules
@@ -22,3 +23,4 @@ head
   script(src="/socket.io/socket.io.js")
 
   script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js")
+
