--- a/views/includes/gameinstance.pug
+++ b/views/includes/gameinstance.pug
@@ -38,12 +38,20 @@ div(class='card bg-light w-100')
 
 script.
       const userColor = '!{color}';
+      let draggable; // for game viewing
       var state = "!{state}";
       var board,
       game = new Chess(),
       statusEl = $('#status'),
       fenEl = $('#fen'),
       pgnEl = $('#pgn');
+
+      // for game viewing
+      if (userColor === 'neither') {
+        draggable = false;
+      } else {
+        draggable = true;
+      }
 
       var removeGreySquares = function() {
         $('#board .square-55d63').css('background', '');
@@ -161,7 +169,7 @@ script.
       };
       
       var cfg = {
-        draggable: true,
+        draggable: draggable,
         position: state,
         onDragStart: onDragStart,
         onDrop: onDrop,
