--- a/views/includes/chat.pug
+++ b/views/includes/chat.pug
@@ -5,6 +5,8 @@ ul(class='nav nav-tabs mb-2')
 
 //- div(class='list group h-75' id="world_chat")
 div(class='card overflow-auto' id="world_chat" style="height: 400px")
+
+
 div(class='list group h-75 overflow-auto' id="private_chat")
     // example chat block
     li(class='list-group-item mb-1')
@@ -20,9 +22,9 @@ div(class='list group h-75 overflow-auto' id="private_chat")
 div(class='input-group border-top pt-2' )
     input(type='text' class='form-control' placeholder='Message world chat' id="message")
     div(class='input-group-append')
-        button(class='btn btn-outline-primary' onClick='ButtonIsClicked()' autocomplete="off") Send
+        button(class='btn btn-outline-primary' onClick='ButtonIsClicked()') Send
 
-        
+
 script.
     
     $("#world_chat").show();
@@ -44,44 +46,42 @@ script.
 
     function ButtonIsClicked(){
         
-        var chat_message = $("#message").val();
-        //- $("#world_chat").html();
+        var chat_message = $("#message").val()
+        $("#world_chat").html(null) 
         //- Check if message is empty or only space, then do nothing
         if(chat_message.trim().length != 0){
-            var messages_content= $("#world_chat").html()
+            //- var messages_content_one = $("#world_chat").html()
             //- $("#world_chat").html(messages_content_one + '<strong>' + 'Thanh: ' + '<small>' + chat_message + '<hr>')
             
-                $.ajax({method:'POST',
-                    url: 'message', 
-                    data: {message: chat_message}, 
-                    success: function(fields){
+                    $.ajax({method:'POST',
+                        url: 'message', 
+                        data: {message: chat_message}, 
+                        success: function(fields){
                             //- console.log(fields);
-                        $.ajax({method: 'GET',
-                            url: 'message', 
-                            data: {},
-                            dataType: "json", 
-                            success: function(rows){
-
-                                for (i=0 ; i < rows.length ; i++){
-                                    var messages_content = $("#world_chat").html()
-                                    
+                            $.ajax({method: 'GET',
+                                url: 'message', 
+                                data: {},
+                                dataType: "json", 
+                                success: function(rows){
+                                    for (i=0 ; i < rows.length ; i++){
+                                    var messages_content_one =  $("#world_chat").html();
                                     var row = rows[i];
-                                    $("#world_chat").html(messages_content + '<strong>' + row.uid + ': ' + '<small>' + '(' + row.timestamp + '): ' + row.message + '<hr>');
+                                    $("#world_chat").html(messages_content_one + '<strong>' + row.uid + ': ' + '<small>' + '(' + row.timestamp + '): ' + row.message + '<hr>');
 
                                     }
- 
-                                }, 
-                            error: function(err){alert("error when loading the data");}
+                                                
+                                    }, 
+                                error: function(err){alert("error when loading the data");}
 
-                            });
-                               
-                    }
+                                });
+                        }
                         //- },
-                    error: function(err){alert("error when pushing message to db");}
+                        //- error: function(err){alert(err);}
 
-
-                });
+                    });
         }
+
+    }
 
     //- var socket = io();
     //-     socket.emit('chat message', $('#message').val());
@@ -107,22 +107,3 @@ script.
     //-     }
     //- }
     
-
-    //- fuction chatOutPut(){
-
-    //-     $.ajax({method: 'GET',
-    //-         url: 'message', 
-    //-         data: {},
-    //-         dataType: "json", 
-    //-         success: function(rows){
-    //-             for (i=0 ; i < rows.length ; i++){
-    //-             var row = rows[i];
-    //-             $("#world_chat").html('<strong>' + row.uid + ': ' + '<small>' + '(' + row.timestamp + '): ' + row.message + '<hr>');
-
-    //-             }
-                               
-    //-             }, 
-    //-         error: function(err){alert("error when loading the data");}
-
-    //-         });
-    //- }
