added update files

--- a/views/includes/gameinstance.pug
+++ b/views/includes/gameinstance.pug
@@ -19,16 +19,25 @@ div(class='card bg-light w-100')
     div(class='row')
       div(class='col-5')
         div(class='d-flex justify-content-around')
-          h5(id="player1_turn") Player 1
+          h5(id="player1_turn") Player !{uid}
+          if color === 'w'
+            p White
+          else
+            p Black
       div(class='col-2 border-right border-left')
         div(class='d-flex justify-content-around')
           h5 vs.
       div(class='col-5')
         div(class='d-flex justify-content-around')
-          h5(id="player2_turn") !{state}
+          h5(id="player2_turn") Player !{otherUser}
+          if color === 'w'
+            p Black
+          else
+            p White
 
 
 script.
+      const userColor = '!{color}';
       var state = "!{state}";
       var board,
       game = new Chess(),
@@ -51,9 +60,12 @@ script.
       var onDragStart = function(source, piece) {
       // do not pick up pieces if the game is over
       // or if it's not that side's turn
+      // or if it's not the user's color
         if (game.game_over() === true ||
           (game.turn() === 'w' && piece.search(/^b/) !== -1) ||
-          (game.turn() === 'b' && piece.search(/^w/) !== -1)) {
+          (game.turn() === 'b' && piece.search(/^w/) !== -1) ||
+          (userColor === 'w' && piece.search(/^b/) !== -1) || 
+          (userColor === 'b' && piece.search(/^w/) !== -1)) {
         return false;
         }
       };
@@ -70,7 +82,9 @@ script.
       
         // illegal move
         if (move === null) return 'snapback';
-          updateStatus();
+        
+        updateStatus();
+        updateState();
       };
 
 
@@ -102,6 +116,18 @@ script.
         //- $.ajax({method:'GET', url: 'game/state')}
 
       };
+
+      // Sends AJAX request to server to update game state
+      // TODO: Use AJAX to wait for game state update
+      var updateState = function() {
+        $.ajax({
+          method:'POST',
+          url: 'game/state', 
+          data: {status: game.fen()}, 
+        //- success: function(data){ alert(data); }, 
+        //- error: function(xhr, desc, err){console.log(err);}
+        });
+      };
       
       var updateStatus = function() {
         var status = '';
@@ -109,9 +135,6 @@ script.
         var moveColor = 'White';
         if (game.turn() === 'b') {
           moveColor = 'Black';
-
-          //- console.log("black turn")
-
         }
         // checkmate?
         if (game.in_checkmate() === true) {
@@ -135,15 +158,6 @@ script.
         statusEl.html(status);
         fenEl.html(game.fen());
         pgnEl.html(game.pgn());
-
-        $.ajax({method:'POST',
-           url: 'game/state', 
-        data: {status: game.fen()}, 
-        //- success: function(data){ alert(data); alert("asdadadd")}, 
-        //- error: function(xhr, desc, err){console.log(err);}
-
-        });
-
       };
       
       var cfg = {
@@ -159,5 +173,3 @@ script.
       board = ChessBoard('board', cfg);
       game.load(state);
       updateStatus();
-      
-      
