--- a/views/includes/chat.pug
+++ b/views/includes/chat.pug
@@ -23,10 +23,33 @@ div(class='input-group border-top pt-2' )
     input(type='text' class='form-control' placeholder='Message world chat' id="message")
     div(class='input-group-append')
         button(class='btn btn-outline-primary' onClick='ButtonIsClicked()') Send
+        //- button(class='btn btn-outline-primary') Send
+
 
 
 script.
-    
+    var num_messages = 0;
+    //- setInterval(function() {
+    //-     $.ajax({method: 'GET',
+    //-     url: 'message', 
+    //-     data: {},
+    //-     dataType: "json", 
+    //-         success: function(rows){
+    //-         if(num_messages >= rows.length())  {                
+                                    
+    //-                 for (i=0 ; i < rows.length ; i++){
+    //-                 var messages_content_one =  $("#world_chat").html();
+    //-                 var row = rows[i];
+    //-                 $("#world_chat").html(messages_content_one + '<strong>' + row.uid + ': ' + '<small>' + '(' + row.timestamp + '): ' + row.message + '<hr>');
+
+    //-                 } 
+    //-             }   
+    //-             }, 
+            //- error: function(err){alert("error when loading the data");}
+
+    //-         });
+    //- }, 1000)
+
     $("#world_chat").show();
     $("#private_chat").hide();
     //- if user not login ==> console ==> you have no permission to view private chat
@@ -45,14 +68,12 @@ script.
     }
 
     function ButtonIsClicked(){
-        
         var chat_message = $("#message").val()
         $("#world_chat").html(null) 
         //- Check if message is empty or only space, then do nothing
         if(chat_message.trim().length != 0){
             //- var messages_content_one = $("#world_chat").html()
-            //- $("#world_chat").html(messages_content_one + '<strong>' + 'Thanh: ' + '<small>' + chat_message + '<hr>')
-            
+            //- $("#world_chat").html(messages_content_one + '<strong>' + 'Thanh: ' + '<small>' + chat_message + '<hr>')            
                     $.ajax({method:'POST',
                         url: 'message', 
                         data: {message: chat_message}, 
@@ -63,13 +84,13 @@ script.
                                 data: {},
                                 dataType: "json", 
                                 success: function(rows){
+                                    num_message = rows.length
                                     for (i=0 ; i < rows.length ; i++){
                                     var messages_content_one =  $("#world_chat").html();
                                     var row = rows[i];
                                     $("#world_chat").html(messages_content_one + '<strong>' + row.uid + ': ' + '<small>' + '(' + row.timestamp + '): ' + row.message + '<hr>');
 
-                                    }
-                                                
+                                    }    
                                     }, 
                                 error: function(err){alert("error when loading the data");}
 
