--- a/views/includes/chat.pug
+++ b/views/includes/chat.pug
@@ -1,79 +1,43 @@
 ul(class='nav nav-tabs mb-2')
     li(class='nav item')
-        a(class='nav-link active' onClick='OpenWorldChat()') World
-        a(class='nav-link' onClick='OpenPrivateChat()') Private
+        a(class='nav-link active') Chat Room
 
 //- div(class='list group h-75' id="world_chat")
 div(class='card overflow-auto' id="world_chat" style="height: 400px")
-
-
-div(class='list group h-75 overflow-auto' id="private_chat")
-    // example chat block
-    li(class='list-group-item mb-1')
-        div(class='d-flex w-100 justify-content-between')
-            h6(class='mb-0') Name
-        small Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
-    // example chat block
-    li(class='list-group-item mb-1')
-        div(class='d-flex w-100 justify-content-between')
-            h6(class='mb-0') Name
-        small Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
-
 div(class='input-group border-top pt-2' )
     input(type='text' class='form-control' placeholder='Message world chat' id="message")
     div(class='input-group-append')
         button(class='btn btn-outline-primary' onClick='ButtonIsClicked()') Send
-        //- button(class='btn btn-outline-primary') Send
-
-
 
 script.
-    var num_messages = 0;
-    //- setInterval(function() {
-    //-     $.ajax({method: 'GET',
-    //-     url: 'message', 
-    //-     data: {},
-    //-     dataType: "json", 
-    //-         success: function(rows){
-    //-         if(num_messages >= rows.length())  {                
-                                    
-    //-                 for (i=0 ; i < rows.length ; i++){
-    //-                 var messages_content_one =  $("#world_chat").html();
-    //-                 var row = rows[i];
-    //-                 $("#world_chat").html(messages_content_one + '<strong>' + row.uid + ': ' + '<small>' + '(' + row.timestamp + '): ' + row.message + '<hr>');
+    var num_messages = 0
 
-    //-                 } 
-    //-             }   
-    //-             }, 
-            //- error: function(err){alert("error when loading the data");}
+    function update_message(length){
+        num_messages = length
+    } 
 
-    //-         });
-    //- }, 1000)
+    setInterval(function() {
+        console.log(num_messages)
+        $.ajax({method: 'GET',
+        url: 'message', 
+        data: {},
+        dataType: "json", 
+            success: function(rows){
+            var length = rows.length
+            if(num_messages < length) { 
+                update_message(length)
+                messages(rows)
+                    } 
+                }   
 
-    $("#world_chat").show();
-    $("#private_chat").hide();
-    //- if user not login ==> console ==> you have no permission to view private chat
-
-    //- else ...open private box
-    function OpenPrivateChat(){
-        console.log('Private Chat Is Opened');
-        $("#world_chat").hide();
-        $("#private_chat").show();
-    }
-
-    function OpenWorldChat(){
-        console.log('World Chat Is Opened');
-        $("#world_chat").show();
-        $("#private_chat").hide();
-    }
-
+            });
+    }, 1000)
+    
     function ButtonIsClicked(){
         var chat_message = $("#message").val()
         $("#world_chat").html(null) 
         //- Check if message is empty or only space, then do nothing
-        if(chat_message.trim().length != 0){
-            //- var messages_content_one = $("#world_chat").html()
-            //- $("#world_chat").html(messages_content_one + '<strong>' + 'Thanh: ' + '<small>' + chat_message + '<hr>')            
+        if(chat_message.trim().length != 0){           
                     $.ajax({method:'POST',
                         url: 'message', 
                         data: {message: chat_message}, 
@@ -84,47 +48,32 @@ script.
                                 data: {},
                                 dataType: "json", 
                                 success: function(rows){
-                                    num_message = rows.length
-                                    for (i=0 ; i < rows.length ; i++){
-                                    var messages_content_one =  $("#world_chat").html();
-                                    var row = rows[i];
-                                    $("#world_chat").html(messages_content_one + '<strong>' + row.uid + ': ' + '<small>' + '(' + row.timestamp + '): ' + row.message + '<hr>');
-
-                                    }    
-                                    }, 
+                                    messages(rows)
+                                }, 
                                 error: function(err){alert("error when loading the data");}
-
                                 });
                         }
-                        //- },
-                        //- error: function(err){alert(err);}
 
                     });
         }
 
     }
 
-    //- var socket = io();
-    //-     socket.emit('chat message', $('#message').val());
-    //-       $('#message').val('');
-    //-       return false;
-    //-     socket.on('chat message', function(msg){
-    //-       $('#world_chat').append($('<li>').text(msg));
-    //-       window.scrollTo(0, document.body.scrollHeight);
-    //-     });
+    function messages(rows){
+        $("#world_chat").html(null) 
+        if(rows.length <= 6){
+            for (i=0 ; i < rows.length ; i++){
+                var messages_router =  $("#world_chat").html();
+                var row = rows[i];
+                $("#world_chat").html(messages_router + '<strong>' + row.uid + ': ' + '<small>' + '(' + row.timestamp + '): ' + row.message + '<hr>');
+            }
+        }
+        else{                       
+            for (i= (rows.length - 6) ; i < rows.length ; i++){
+                var messages_content_one =  $("#world_chat").html();
+                var row = rows[i];
+                $("#world_chat").html(messages_content_one + '<strong>' + row.uid + ': ' + '<small>' + '(' + row.timestamp + '): ' + row.message + '<hr>');
+            }
+         }
+    }  
 
-    //- }
-
-    //- function socket() {
-    //-     var socket = io();
-    //-     $('form').submit(function(){
-    //-       socket.emit('chat message', $('#message').val());
-    //-       $('#message').val('');
-    //-       return false;
-    //-     });
-    //-     socket.on('chat message', function(msg){
-    //-       $('#world_chat').append($('<li>').text(msg));
-    //-       window.scrollTo(0, document.body.scrollHeight);
-    //-     }
-    //- }
-    
