Changing when game loads fen

--- a/views/includes/gameinstance.pug
+++ b/views/includes/gameinstance.pug
@@ -176,7 +176,7 @@ script.
       };
       
       board = ChessBoard('board', cfg);
-      game.load(state);
+      //- game.load(state);
       updateStatus();
 
       // Set flag to wait for state changes
