Testing updateState fix.

--- a/views/includes/gameinstance.pug
+++ b/views/includes/gameinstance.pug
@@ -131,6 +131,8 @@ script.
           method:'POST',
           url: 'state', 
           data: {status: game.fen(), gameId: !{gameId}}, 
+          success: ,
+          error: 
         });
       };
       
