Added debug statements

--- a/views/includes/gameinstance.pug
+++ b/views/includes/gameinstance.pug
@@ -127,6 +127,7 @@ script.
       };
 
       var updateState = function() {
+        console.log("Sending POST with state:\n" + game.fen());
         $.ajax({
           method:'POST',
           url: 'state', 
