Testing updateState fix III.

--- a/views/includes/gameinstance.pug
+++ b/views/includes/gameinstance.pug
@@ -203,7 +203,7 @@ script.
               let oldState = game.fen();
               state = data;
               console.log("Waiting for state!");
-              if (oldState !== state) {  
+              if (oldState !== state && waiting === true) {  
                 board.position(state);
                 game.load(state);
                 updateStatus();
