--- a/views/includes/gameinstance.pug
+++ b/views/includes/gameinstance.pug
@@ -184,7 +184,7 @@ script.
       };
       
       board = ChessBoard('board', cfg);
-      //- game.load(state);
+      game.load(state);
       updateStatus();
 
       // Set flag to wait for state changes
