--- a/views/includes/static_about.pug
+++ b/views/includes/static_about.pug
@@ -13,5 +13,5 @@ div(class='d-flex h-100 justify-content-center')
       small(class='ml-2 font-weight-light text-uppercase') Front End
     h6 Jay Lee
       small(class='ml-2 font-weight-light text-uppercase') Back End Lead
-    h6 Adan Guanlal 
+    h6 Adan Guanlao 
       small(class='ml-2 font-weight-light text-uppercase') Back End and Github Master.
