--- a/views/includes/header_lobby.pug
+++ b/views/includes/header_lobby.pug
@@ -1,4 +1,4 @@
-div(class="jumbotron jumbotron-fluid px-2 py-0 mt-4" style="background:transparent !important")
+div(class="jumbotron jumbotron-fluid px-2 py-0 mt-4 text-center" style="background:transparent !important")
   h1(class="display-5 text-priamry") Game Lobbies
   p(class="lead") Join or view active games.
   hr(class="my-4")
