--- a/views/includes/navigation.pug
+++ b/views/includes/navigation.pug
@@ -28,4 +28,4 @@ div(class='d-flex text-center justify-content-center border-bottom py-3')
 div(class='d-flex text-center justify-content-center align-items-center')
   small(class='p-4')
     h6 Site information
-    p(class="text-muted") 667, Group 3. <br> This is a test page not meant for any practical use.
+    p(class="text-muted") CSC 667, Group 3. <br> This is a test page not meant for any practical use.
