Changed create lobby placeholder text

--- a/views/includes/form_create_lobby.pug
+++ b/views/includes/form_create_lobby.pug
@@ -17,6 +17,6 @@ div(class='d-flex h-100 justify-content-center align-items-center')
       form(class='text-left' action='/game/create' method='post')
         div(class='form-group')
           label Lobby Title 
-          input(type='text' class='form-control' name="lobbyTitle" minlength="5" maxlength="30" placeholder=user+'\'s Game' autofocus)
+          input(type='text' class='form-control' name="lobbyTitle" minlength="5" maxlength="30" placeholder="Lobby Name" autofocus)
         button(type='submit' class='btn btn-primary w-100 mt-4') Create
 
