Added lobby title to game instance

--- a/views/includes/gameinstance.pug
+++ b/views/includes/gameinstance.pug
@@ -9,7 +9,7 @@ div(class="container shadow bg-dark d-flex flex-column justify-content-center al
       span#status
 
 div(class='card bg-light w-100')
-  div(class='card-header text-center py-1') 000
+  div(class='card-header text-center py-1') !{lobbyTitle}
   div(class='card-body py-3')
     div(class='row')
       div(class='col-5')
